Start unifying check types
* Removes source code checks

* Starts migration to one single json-based check storage format.
  This allows for greater flexibility and a simplified check handling